# hatch-aws-publisher

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bumper.yaml  guardian.yaml  publisher.yaml
src/hatch_aws_publisher/: hooks.py  publisher.py
tests/: test_dummy.py
